cdebconf (0.84) UNRELEASED; urgency=low

  * Fix horrible argv initialisation code in gtk frontend.
  * Add gtk frontend to cdebconf.deb; enable cdebconf-gtk-udeb.

 -- Colin Watson <cjwatson@debian.org>  Thu, 28 Jul 2005 16:56:57 +0100

cdebconf (0.83) unstable; urgency=low

  * Disable flow control in the newt frontend. It's very confusing when you
    press Ctrl-S by accident and wonder why the installer stopped accepting
    input.
  * Fix memory leak in confmodule_communicate.

  * Updated translations:
    - German (de.po) by Dennis Stampfer
    - Esperanto (eo.po) by Serge Leblanc
    - Spanish (es.po) by Javier Fernández-Sanguino Peña
    - Basque (eu.po) by Piarre Beobide Egaña
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Macedonian (mk.po) by Georgi Stanojevski
    - Dutch (nl.po) by Bart Cornelis
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Russian (ru.po) by Yuri Kozlov
    - Slovenian (sl.po) by Jure Čuhalev
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Colin Watson <cjwatson@debian.org>  Thu, 28 Jul 2005 11:26:08 +0100

cdebconf (0.82) unstable; urgency=low

  [ Colin Watson ]
  * Simplify strchoicesplit() slightly.
  * Use (char *) 0 as the sentinel to strvacat(), not just 0; this makes a
    difference on some 64-bit systems.
  * Perform printf format string (requires gcc) and sentinel (requires gcc
    >= 4) checking on various function arguments.

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Gallegan (gl.po) by Jacobo Tarrio
    - Hebrew (he.po) by Lior Kaplan
    - Indonesian (id.po) by Arief S Fitrianto
    - Italian (it.po) by Giuseppe Sacco
    - Japanese (ja.po) by Kenshi Muto
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Slovak (sk.po) by Peter Mann
    - Tagalog (tl.po) by Eric Pareja