@@ -2,6 +2,7 @@ cdebconf (0.84) UNRELEASED; urgency=low
 
   * Fix horrible argv initialisation code in gtk frontend.
   * Add gtk frontend to cdebconf.deb; enable cdebconf-gtk-udeb.
+  * Fix some compiler warnings in gtk frontend.
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 28 Jul 2005 16:56:57 +0100
 
